whyred: Disable animateScreenLights
*sdm660 devices seem to have an issue with EGL.

libEGL: eglCreateWindowSurface:712 error 300b (EGL_BAD_NATIVE_WINDOW)
libEGL: eglDestroySurface:857 error 300d (EGL_BAD_SURFACE)
ColorFade: eglDestroySurface failed: error 12301
    java.lang.Throwable
        at com.android.server.display.ColorFade.logEglError(ColorFade.java:690)
        at com.android.server.display.ColorFade.destroyEglSurface(ColorFade.java:626)
        at com.android.server.display.ColorFade.dismissResources(ColorFade.java:333)
        at com.android.server.display.DisplayPowerState.dismissColorFadeResources(DisplayPowerState.java:205)
        at com.android.server.display.DisplayPowerController.animateScreenStateChange(DisplayPowerController.java:1358)
        at com.android.server.display.DisplayPowerController.updatePowerState(DisplayPowerController.java:783)
        at com.android.server.display.DisplayPowerController.access$500(DisplayPowerController.java:82)
        at com.android.server.display.DisplayPowerController$DisplayControllerHandler.handleMessage(DisplayPowerController.java:1767)
        at android.os.Handler.dispatchMessage(Handler.java:106)
        at android.os.Looper.loop(Looper.java:193)
        at android.os.HandlerThread.run(HandlerThread.java:65)
        at com.android.server.ServiceThread.run(ServiceThread.java:44)

Change-Id: I0f0b3c1cdd2e84bf75c2300feac0ffa5012cba28
Signed-off-by: Andrew Hexen <SyberHexen@gmail.com>

--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -227,6 +227,9 @@
          provisioning, availability etc -->
     <bool name="config_carrier_volte_available">true</bool>
 
+    <!-- If this is true, the screen will fade off. -->
+    <bool name="config_animateScreenLights">false</bool>
+
     <!-- Configure wifi tcp buffersizes in the form:
          rmem_min,rmem_def,rmem_max,wmem_min,wmem_def,wmem_max -->
     <string name="config_wifi_tcp_buffers" translatable="false">524288,1048576,4194304,262144,524288,3670016</string>
