--- a/overlay-aosp/framworks/base/core/res/res/values/ex_config.xml
+++ b/overlay-aosp/framworks/base/core/res/res/values/ex_config.xml
@@ -14,4 +14,6 @@
 <resources>
     <!-- Whether device has screen with higher aspect ratio -->
     <bool name="config_haveHigherAspectRatioScreen">true</bool>
+
+    <integer name="config_deviceLightCapabilities">255</integer>
 </resources>
